# Tradex-Hub

./: CLAUDE.md  Cargo.toml  README.md  package.json
backend/: package.json  tradex.db  tradex.db-shm  tradex.db-wal
backend/src/: config.ts  index.ts
backend/src/api/: routes.ts  validate.ts
backend/src/api/handlers/: auth.ts  badge.ts  leaderboard.ts  options.ts  patterns.ts  player.ts  predictions.ts  prices.ts  session.ts  trading.ts
backend/src/api/middleware/: auth.ts
backend/src/circuit/: badge_proof.json
backend/src/data/: patterns.json
backend/src/db/: connection.ts  schema.ts
backend/src/db/repositories/: optionRepo.ts  playerRepo.ts  positionRepo.ts  sessionRepo.ts  tradeRepo.ts
backend/src/domain/: errors.ts  types.ts
backend/src/services/: achievementEngine.ts  badgeService.ts  leaderboardService.ts  noirProver.ts  optionsEngine.ts  patternService.ts  playerService.ts  predictionService.ts  priceService.ts  sessionManager.ts  sorobanClient.ts  tradingEngine.ts
backend/src/ws/: broadcaster.ts  handler.ts  messages.ts
circuits/badge_proof/: Nargo.toml  Prover.toml  README.md
circuits/badge_proof/src/: main.nr
contracts/tradex-hub/: Cargo.toml  README.md
contracts/tradex-hub/src/: errors.rs  events.rs  lib.rs  storage.rs  types.rs  verification.rs
scripts/: build-badge-circuit.sh  build.ts  deploy-tradex-hub.sh  deploy-tradex-hub.ts  deploy.ts  setup.ts
scripts/utils/: contracts.ts
sgs_frontend/: index.html  package.json
sgs_frontend/src/: App.tsx  config.ts  index.css
sgs_frontend/src/components/: GamesCatalog.tsx  Layout.css  Layout.tsx  WalletSwitcher.tsx
sgs_frontend/src/games/tradex/: TradexGame.tsx
sgs_frontend/src/games/tradex/components/: AssetHeader.tsx  BadgeCollection.tsx  BottomTabs.tsx  LeaderboardTable.tsx  NavBar.tsx  NotificationToast.tsx  OrderPanel.tsx  PortfolioWidget.tsx  SessionHistoryList.tsx  StreakIndicator.tsx  TickerBar.tsx  TradingChart.tsx
sgs_frontend/src/types/: navigation.ts
sgs_frontend/src/utils/: constants.ts
tradex-hub-frontend/: README.md  index.html  package.json
tradex-hub-frontend/src/: App.tsx  config.ts  index.css
tradex-hub-frontend/src/games/tradex/: TradexGame.tsx  routeNav.ts  types.ts
tradex-hub-frontend/src/utils/: constants.ts
(+41 files in other folders)
