[workspace]
resolver = "2"
version = "0.1.2"
members = [
  "contracts/mock-game-hub",
  "contracts/twenty-one",
  "contracts/number-guess",
  "contracts/dice-duel",
  "contracts/tradex-hub"
]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "acffbbd45be6a0a551146eebfc268d6f95078246", default-features = false, features = [
  "alloc",
] }

ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", rev = "f13bd6b7f30558229a5eee737f30d68ab5eee085", default-features = false }
stellar-tokens = { git = "https://github.com/JoE11-y/stellar-contracts.git", rev = "b52d23be60f05a77fae79165f551cf9ddcf8154a" }
stellar-access = { git = "https://github.com/JoE11-y/stellar-contracts.git", rev = "b52d23be60f05a77fae79165f551cf9ddcf8154a" }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
