[package]
name = "tradex-hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
ultrahonk_rust_verifier = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "cf58d535ab05d02802a5e804a95524650f8c62c7" }
